overlapping content for scrolling navbar solved and main slider added

--- a/style/style.css
+++ b/style/style.css
@@ -154,7 +154,99 @@ header {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding-top: 200px;
+  padding-top: 190px;
   padding-bottom: 50px;
-  height: 120vh;
+}
+
+/* Social box */
+.social-box {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  gap: 10px;
+  color: #fff;
+  justify-content: end;
+  align-items: baseline;
+  padding: 0 12px;
+}
+.social-box p {
+  font-size: 14px;
+  font-weight: bold;
+}
+.social-icon:hover {
+  color: #dcf836;
+  transition: all 0.6s;
+}
+
+/* Owl Carousel */
+.main-carousel {
+  margin-top: 1rem;
+  width: 90%;
+  margin-bottom: 60px;
+}
+.card-carousle-box {
+  position: relative;
+}
+.movie-info {
+  position: absolute;
+  bottom: 10%;
+  left: 6%;
+}
+.movie-info .btn {
+  color: white;
+}
+.movie-info .btn-item1 {
+  background-color: #07a9cd;
+  border: 2px solid #3871aa;
+}
+.movie-info .btn-item2 {
+  background-color: #eeac04;
+  border: 2px solid #c99002;
+}
+.movie-info .btn-item3 {
+  background-color: #38c657;
+  border: 2px solid #2b9c43;
+}
+.movie-info .btn-item4 {
+  background-color: #f9d206;
+  border: 2px solid #d3b004;
+}
+
+.movie-info h4 {
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.movie-info p {
+  margin-top: 0;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+}
+.movie-info i {
+  color: #f9d206;
+}
+
+/*position dots on the right */
+.owl-carousel .owl-dots {
+  position: absolute;
+  right: 10px;
+  bottom: -55px;
+  text-align: right;
+}
+.owl-dot span {
+  background-color: #fff !important;
+}
+
+.owl-dots .owl-dot.active span,
+.owl-dots .owl-dot span:hover {
+  background-color: #dcf836 !important;
+}
+
+/* Movies Series Section */
+.movies-series-section {
+  background-color: #020d18;
+  height: 800px;
 }
